--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -352,6 +352,9 @@ body{
         .profile-name{
             font-size: 25px;
         }
+        .profile-profession{
+            font-size: 20px;
+        }
           .profile{
               display: flex;
               flex-direction: column;
@@ -420,7 +423,7 @@ body{
                               font-size: 16px;
                           }
                           p{
-                              font-size: 12px;
+                              font-size: 14px;
                           }
                       }
                   }
