--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,18 +9,22 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   text-decoration: none;
 }
 
+@font-face {
+  font-family: abiah-regular;
+  src: url(font/Abiah-Regular.woff);
+}
 body h2 {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: abiah-regular;
   font-size: 20px;
   color: #495057;
 }
 body p {
-  font-family: "Roboto", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 14px;
   color: #495057;
 }
 body h3 {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: abiah-regular;
   font-size: 30px;
   color: #b58e0f;
   text-align: center;
@@ -40,12 +44,13 @@ body header {
   padding: 10px;
 }
 body header .logo {
+  height: 170px;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
 }
 body header .logo a img {
-  width: 50px;
-  height: 50px;
+  width: 200px;
 }
 body header nav, body header ul {
   display: flex;
@@ -58,7 +63,7 @@ body header nav li a, body header ul li a {
   color: #b58e0f;
 }
 body header nav li a span, body header ul li a span {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: abiah-regular;
   font-size: 20px;
 }
 body header nav li a:link, body header ul li a:link {
@@ -66,6 +71,26 @@ body header nav li a:link, body header ul li a:link {
 }
 body header nav li a:hover, body header ul li a:hover {
   color: #737270;
+}
+body header .wa-logo {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 40px;
+  background-color: #25d366;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 3px 4px 3px #999;
+  right: 35px;
+  z-index: 100;
+}
+body header .wa-logo a {
+  text-decoration: none;
+  color: #FFF;
+}
+body header .my-float {
+  margin-top: 10px;
 }
 body .main-container {
   width: 100%;
@@ -93,7 +118,7 @@ body .container #present {
   padding-top: 70px;
 }
 body .container .profile-name {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: abiah-regular;
   color: #b58e0f;
   font-size: 40px;
   padding: 30px;
@@ -115,7 +140,7 @@ body .container .profile .profile-pic img {
   border-radius: 50%;
 }
 body .container .profile .profile-extract p {
-  font-family: "Roboto", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   color: #495057;
   font-style: italic;
   text-align: center;
@@ -229,7 +254,7 @@ body .container .service-presentation .service-list ul li p {
 body .container .service-presentation .service-list ul li ul li {
   list-style-type: circle;
   text-transform: initial;
-  font-family: "Roboto", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 12px;
 }
 body .container .service-presentation .service-list .service-pic {
@@ -286,9 +311,13 @@ body .footerContainer .copyright p span {
   body h3 {
     font-size: 25px;
   }
+  body header .logo {
+    height: 85px;
+    box-sizing: border-box;
+    padding-right: 15px;
+  }
   body header .logo a img {
-    width: 35px;
-    height: 35px;
+    width: 100px;
   }
   body header nav li a span, body header ul li a span {
     font-size: 12px;
@@ -315,14 +344,18 @@ body .footerContainer .copyright p span {
     height: 100px;
     border-radius: 50%;
   }
-  body .container .description {
+  body .container .services .services-container .description {
     display: flex;
     flex-direction: column;
+    width: 80%;
+    margin: 30px;
+    position: relative;
+    animation: moves-staff 4s 1;
   }
-  body .container .description .card {
+  body .container .services .services-container .description .card {
     width: 100%;
   }
-  body .container .description, body .container .productContainer, body .container .social {
+  body .container .social {
     margin: 8px;
     width: 100%;
     height: 100%;
