--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -37,10 +37,11 @@ header{
     align-items: center;
     padding: 10px;
     .logo{
+        height: 170px;
+        box-sizing: border-box;
         a{
             img{
-                width: 50px;
-                height: 50px;
+                width: 200px;
             }
             
         }
@@ -68,6 +69,27 @@ header{
                 }
             }
         }
+    }
+    .wa-logo{
+        position: fixed;
+        width: 50px;
+        height: 50px;
+        bottom: 40px;
+        background-color: #25d366;
+        border-radius: 50px;
+        text-align: center;
+        font-size: 30px;
+        box-shadow: 3px 4px 3px #999;
+        right: 35px;
+        z-index: 100;
+        a{
+            text-decoration: none;
+            color: #FFF;
+        }
+    }
+    .my-float {
+        margin-top: 10px;
+        
     }
  }
 
@@ -330,10 +352,12 @@ body{
     }
     header{
         .logo{
+            height: 85px;
+            box-sizing: border-box;
+            padding-right: 15px;
            a{
                img { 
-                   width: 35px;
-                   height: 35px;
+                   width: 100px;
                 }
             }
         }
@@ -372,15 +396,22 @@ body{
                   }
               }
           }
-          .description{
-            display: flex;
-            flex-direction: column;
-           
-            .card{
-              width: 100%;        
-                  }
-          }
-        .description, .productContainer, .social{
+         .services{ 
+            .services-container{ 
+                .description{
+                    display: flex;
+                    flex-direction: column;
+                    width: 80%;
+                    margin: 30px;
+                    position: relative;
+                    animation: moves-staff 4s 1;
+                    .card{
+                    width: 100%;        
+                        }
+            }
+        }
+    }
+        .social{
             margin: 8px;
             width: 100%;
             height: 100%;
