--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -307,7 +307,8 @@ header{
         display: flex;
         width: 100%;
         flex-direction: column;
-        position: relative;
+        background-color: $white;
+        position: fixed;
         bottom: 0px;
         .footerNav{
             display: flex;
