--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -193,6 +193,9 @@ header{
         display: flex;
         flex-direction: column;
         align-items: center;
+    .form{
+        width: 100%;
+    }
      .social{
          display: flex;
         p{
@@ -291,6 +294,7 @@ header{
         background-color: $white;
         position: fixed;
         bottom: 0px;
+        height: 100px;
         .footerNav{
             display: flex;
             align-items: center;
@@ -335,6 +339,7 @@ header{
             align-items: center;
             justify-content: center;
             padding: 5px 0;
+            margin-top: 20px;
             p{  
                 margin: 2px;
                 font-size: 12px;
@@ -434,6 +439,9 @@ body{
                     margin-bottom: 125px;
                 }
             }
+            .form{
+                margin-bottom: 50px;
+            }
         }
         @keyframes moves-staff {
             0%  {left:800px; top:0px;}
@@ -471,11 +479,16 @@ body{
               }
           }
     }
-    }
     .footerContainer{
+        height: 150px;
         .footerNav{
             display: flex;
             flex-direction: column;
         }
+        .copyright{
+            margin-top:0px;
+        }
     }
+    }
+    
 }
